--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+    <title>javaSpeli</title>
 </head>
   <body style="background-color: black;"></body>
 </html>
