--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
     <title>javaSpeli</title>
+
+    <style>
+        .pallo {
+            width: 20px;
+            height:20px;
+            background-color:wihte;
+        }
+    </style>
+    
 </head>
-  <body style="background-color: black;"></body>
+  <body style="background-color: black;">
+
+      <div class="pallo"></div>
+  </body>
 </html>
