--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         .pallo {
             width: 20px;
             height: 20px;
-            background-color: wihte;
+            background-color: rbg(255, 255, 255);
         }
     </style>
     
