--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     </script>
 
-      <p id="piste" style="font-size:40px;">0</p>
+      <p id="piste" style="font-size:40px; color: white;">0</p>
 
   </body>
 </html>
