--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
     </script>
 
       <p id="piste" style="font-size:40px; color: white;">0</p>
-    <button onclick="lisaapiste()">+</button>
+    <button onclick="lisaapiste()" style="color: white;">+</button>
   </body>
 </html>
