--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
         function tormays(pelipala, peliesto) {
             if (
-                pelipala.x + pelipala.widht > peliesto.x ||
-                pelipala.x < peliesto.x + peliesto.widht ||
+                pelipala.x + pelipala.width > peliesto.x ||
+                pelipala.x < peliesto.x + peliesto.width ||
                 pelipala.y + pelipala.height > peliesto.y ||
                 pelipala.y < peliesto.height + peliesto.y
             ) {
