--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 
         
             if (
-                pelipala.x + pelipala.width > peliesto.x ||
-                pelipala.x < peliesto.x + peliesto.width ||
-                pelipala.y + pelipala.height > peliesto.y ||
-                pelipala.y < peliesto.height + peliesto.y
+                pelipala.osansa.x + pelipala.osansa.width > peliesto.osansa.x ||
+                pelipala.osansa.x < peliesto.osansa.x + peliesto.osansa.width ||
+                pelipala.osansa.y + pelipala.osansa.height > peliesto.osansa.y ||
+                pelipala.osansa.y < peliesto.osansa.height + peliesto.osansa.y
             ) {
               lisaapiste();  
             } else {
