--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             if (
                 osansa.x + osansa.width > osansa.x ||
                 osansa.x < osansa.x + osansa.width ||
-               osansa.y + osansa.height > peliesto.y ||
+               osansa.y + osansa.height > osansa.y ||
                 osansa.y < osansa.height + osansa.y
             ) {
               lisaapiste();  
