--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             peliarena.start();
             pelipala = new osansa(30, 30, "white", 10, 120);
             peliesto = new osansa(10, 200, "white", 300, 120);
-            turmaus(pelipala, peliesto);
+            tormaus(pelipala, peliesto);
         }
 
         var peliarena = {
