--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         function aloitapeli() {
             peliarena.start();
             pelipala = new osansa(30, 30, "white", 10, 120);
-            peliesto = new osansa(10, 200, "white", 300, 120);
+            peliesto = new osansa(20, 20, "green", 300, 120);
             tormaus(pelipala, peliesto);
         }
 //pelin areena missä pelaja liikuu
