--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
             peliesto = new osansa(10, 200, "white", 300, 120);
 
                 
+                var element = document.getElementById('some-id');
+                var position = element.getBoundingClientRect();
                 var x = position.left;
                 var y = position.top;
             
