--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             peliesto = new osansa(10, 200, "white", 300, 120);
 
                 
-                var element = document.getElementById('canvas');
+                var element = document.querySelector("canvas");
                 var position = element.getBoundingClientRect();
                 var x = position.left;
                 var y = position.top;
