--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 // liikuminen
     function paivitapelia() {
         if (pelipala.osu(peliesto)){
-            lisaapiste();
+           console.log("piste")
+        } else {
+             lisaapiste();
         }
         
         peliarena.clear();
