--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     function paivitapelia() {
         if (pelipala.osu(peliesto)){
            lisaapiste();
+            peliesto.clear();
         }
         peliarena.clear();
         pelipala.nopeusX = 0;
