--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     function paivitapelia() {
         if (pelipala.osu(peliesto)){
            lisaapiste();
-            delete peliesto;
+            peliesto = new osansa(20, 20, "green", Math.floor(Math.random() * 480) + 9, Math.floor(Math.random() * 265) + 9);
         }
         peliarena.clear();
         pelipala.nopeusX = 0;
