--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
     </script>
     <!--pisteen laskuri ja debug testi-->
       <p id="piste" style="font-size:40px; color: white;">0</p>
-    <button onclick="lisaapiste()">+</button>
+    <nav>
+      <button onclick="talepistee()">save</button>
+       <button onclick="uudelenpistee()">load</button>
+        <button onclick="resepiste()">reset</button>
+      </nav>
   </body>
 </html>
