--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             background: color #eeeeee; ;
             border: 2px solid #d3d3d3;
         }
+        button {
+            font-size: 30px;
+        }
 
 
     </style>
