--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         //pisteiden aloitaa alusta
         function resepiste() {
         piste = 0;
+        nopeus = 0.15;
         paivitapiste();
         }
         //pisteiden talentamiseen
