--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
             peliesto = new osansa(20, 20, "green", Math.floor(Math.random() * 460) + 9, Math.floor(Math.random() * 255) + 9);
             nopeus += 0.5;
         }
+        if (nopeus >= 15) {
+            nopeus = 15;
+        }
 
         
         peliarena.clear();
