--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
   <body style="background-color: black;" onload="aloitapeli()">
    
-    <script scr="app.js"></script>
+    <script src="app.js"></script>
     <!--pisteen laskuri ja debug testi-->
       <p id="piste" style="font-size:40px; color: white;">0</p>
     <nav>
