--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         button {
             font-size: 30px;
         }
+        p {
+            line-height: 0%;
+        }
 
 
     </style>
@@ -21,7 +24,8 @@
    
     <script src="app.js"></script>
     <!--pisteen laskuri ja debug testi-->
-      <p id="piste" style="font-size:40px; color: white;">0</p>
+      <p style="font-size:40px; color: white;">piste: <p id="piste" style="font-size:40px; color: white;">0</p></p>
+      <p style="font-size:40px; color: white;">nopeus: <p id="nopeus" style="font-size:40px; color: white;">0.5</p></p>
     <nav>
       <button onclick="talepistee()">save</button>
        <button onclick="uudelenpistee()">load</button>
