--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>javaSpeli</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+    
+<meta charset="UTF-8">
     <style>
         canvas {
             background: color #eeeeee; ;
