--- a/score.html
+++ b/score.html
@@ -8,6 +8,8 @@
     margin-right: auto;
     width: 900px;
     height: 900px;
+    bacground-color:black;
+    color: white;
     }
   </style>
   
@@ -17,6 +19,9 @@
 <div id="laatikko">
   <h1>hello</h1>
 </div>
-  
+
+  <script>
+    import "app.js";
+  </script>
 </body> 
 </html>
