--- a/score.html
+++ b/score.html
@@ -18,10 +18,12 @@
 
 <div id="laatikko">
   <h1>hello</h1>
+  <p id="point">0</p>
 </div>
 
   <script>
     import "app.js";
+    var x = localStorage.getitem("point");
   </script>
 </body> 
 </html>
