--- a/score.html
+++ b/score.html
@@ -18,12 +18,12 @@
 
 <div id="laatikko">
   <h1>hello</h1>
-  <p id="point">0</p>
+  <p id="piste">0</p>
 </div>
 
   <script>
     import "app.js";
-    var x = localStorage.getitem("point");
+    var x = localStorage.getitem("piste");
   </script>
 </body> 
 </html>
