--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         }
         p {
             line-height: 0%;
+            color: white;
+            font-size:40px;
+        }
+        #scorebord {
+        float: right;
+        width:500px;
+        height:500px;
         }
 
 
@@ -24,6 +31,10 @@
   <body style="background-color: black;" onload="aloitapeli()">
    
     <script src="app.js"></script>
+    <div id="scorebord">
+        <p>hello</p>
+    </div>
+    
     <!--pisteen laskuri ja debug testi-->
       <p style="font-size:40px; color: white;">piste: <p id="piste" style="font-size:40px; color: white;">0</p></p>
       <p style="font-size:40px; color: white;">nopeus: <p id="nopeus" style="font-size:40px; color: white;">0.5</p></p>
