--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
     <script src="app.js"></script>
     <div id="scorebord">
         <p>hello</p>
+        <p id="tpiste">0</p>
     </div>
     
     <!--pisteen laskuri ja debug testi-->
+      <nav>
       <p style="font-size:40px; color: white;">piste: <p id="piste" style="font-size:40px; color: white;">0</p></p>
       <p style="font-size:40px; color: white;">nopeus: <p id="nopeus" style="font-size:40px; color: white;">0.5</p></p>
+          </nav>
     <nav>
       <button onclick="talepistee()">save</button>
        <button onclick="uudelenpistee()">load</button>
